[project]
name = "profiling-cli"
dynamic = ["version"]
description = "This is a CLI tool for profiling Python code."
readme = "README.md"
authors = [{name = "Or Hasson"}]
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "click",
    "line_profiler",
    "httpx",
    "anthropic",
    "pytest-memray",
    "langchain",
    "langchain-anthropic",
    "langchain-community",
    "langchain_mcp_adapters",
    "langchain_ollama",
    "langchain-openai"
]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project.scripts]
profiling-cli= "profiling_cli.cli:cli"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-timeout",
    "ruff"
]

[tool.setuptools_scm]